--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
         }
       }(window.location))
     </script>
-    <title>React App</title>
+    <title>Booking App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
